--- a/OpenGL/makefile
+++ b/OpenGL/makefile
@@ -1,12 +1,16 @@
 
+CC = g++
+CPPFLAGS = -Wall
+GLFLAGS = -lglfw -lGL -lX11 -lpthread -lXrandr -lXi -ldl
+
 main: main.o glad.o
-	g++ -Wall main.o glad.o -o main.exe
+	$(CC) $(CPPFLAGS) $(GLFLAGS) main.o glad.o -o main.exe
 
 main.o: main.cpp main.h
-	g++ -Wall -c main.cpp main.h
+	$(CC) $(CPPFLAGS) $(GLFLAGS) -c main.cpp main.h
 
-glad.o: glad.c
-	g++ -Wall -c glad.c
+glad.o: glad.c glad.h
+	$(CC) $(CPPFLAGS) $(GLFLAGS) -c glad.c glad.h
 
 clean:
-	rm *.o main.exe
+	rm *.o *.gch main.exe
