feat: Handle input

--- a/OpenGL/makefile
+++ b/OpenGL/makefile
@@ -7,10 +7,10 @@ main: main.o glad.o
 	$(CC) $(CPPFLAGS) $(GLFLAGS) main.o glad.o -o main.exe
 
 main.o: main.cpp main.h
-	$(CC) $(CPPFLAGS) $(GLFLAGS) -c main.cpp main.h
+	$(CC) $(CPPFLAGS) -c main.cpp main.h
 
 glad.o: glad.c glad.h
-	$(CC) $(CPPFLAGS) $(GLFLAGS) -c glad.c glad.h
+	$(CC) -c glad.c glad.h
 
 clean:
 	rm *.o *.gch main.exe
