--- a/OpenGL/makefile
+++ b/OpenGL/makefile
@@ -1,16 +1,19 @@
 
 CC = g++
 CPPFLAGS = -Wall
-GLFLAGS = -lglfw -lGL -lX11 -lpthread -lXrandr -lXi -ldl
+LDFLAGS = -lglfw -lGL -lX11 -lpthread -lXrandr -lXi -ldl
 
-main: main.o glad.o
-	$(CC) $(CPPFLAGS) $(GLFLAGS) main.o glad.o -o main.exe
+main.exe: main.o glad.o
+	$(CC) $^ $(CPPFLAGS) $(LDFLAGS) -o $@
 
 main.o: main.cpp main.h
-	$(CC) $(CPPFLAGS) -c main.cpp main.h
+	$(CC) $(CPPFLAGS) -c $<
 
 glad.o: glad.c glad.h
-	$(CC) -c glad.c glad.h
+	$(CC) -c $<
 
+.PHONY: clean
 clean:
 	rm *.o *.gch main.exe
+
+-include $(wildcard *.d)
