feat: shader class

--- a/OpenGL/makefile
+++ b/OpenGL/makefile
@@ -3,7 +3,7 @@ CC = g++
 CPPFLAGS = -Wall
 LDFLAGS = -lglfw -lGL -lX11 -lpthread -lXrandr -lXi -ldl
 
-main.exe: main.o glad.o
+main.exe: main.o glad.o shader.o
 	$(CC) $^ $(CPPFLAGS) $(LDFLAGS) -o $@
 
 main.o: main.cpp main.h
@@ -11,6 +11,9 @@ main.o: main.cpp main.h
 
 glad.o: glad.c glad.h
 	$(CC) -c $<
+
+shader.o: shader.cpp shader.h
+	$(CC) $(CPPFLAGS) -c $<
 
 .PHONY: clean
 clean:
